Agregamos estilo a la lista del menu y al body, modificamos margenes

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <div id="logo">
                 <img src="img/logo.png">
             </div>
-            <div id="menu">
-                <ul id="menu-list">
+            <div id="menu" class="clearfix">
+                <ul id="menu-list" class="clearfix">
                     <li>
                         <a href="#">home</a>
                     </li>
@@ -32,7 +32,11 @@
                     </li>
                 </ul>
             </div>
-
+            <div id="parrafo-header" class="clearfix">
+                <p>Hi there! We are the new kids on the block 
+                    and we build awesome websites and mobile apps.</p>
+                    <a href="#">WORK WITH US!</a>
+            </div>
         </div>
     </div>
 </body>
