Agregamos nuevo div del apartado de servicios y agregamos imganes al documento que van en ese div

--- a/index.html
+++ b/index.html
@@ -35,8 +35,39 @@
             <div id="parrafo-header" class="clearfix">
                 <p>Hi there! We are the new kids on the block 
                     and we build awesome websites and mobile apps.</p>
-                    <a href="#">WORK WITH US!</a>
             </div>
+            <a href="#" id="work-link">WORK WITH US!</a>
+        </div>
+        <div id="services" class="clearfix">
+            <h1>SERVICES WE PROVIDE</h1>
+            <p>
+                We are working with both individuals and businesses from all over the globe 
+                to create awesome websites and applications.
+            </p>
+            <div id="iconos" class="clearfix">
+                <div>
+                    <a href="#">
+                        <img src="/img/img1.png" alt="">
+                    </a>
+                </div>
+                <div>
+                    <a href="#">
+                        <img src="/img/img2.png" alt="">
+                    </a>
+                </div>
+                <div>
+                    <a href="#">
+                        <img src="/img/img3.png" alt="">
+                    </a>
+                </div>
+                <div>
+                    <a href="#">
+                        <img src="/img/img4.png" alt="">
+                    </a>
+                </div>
+            </div>
+
+
         </div>
     </div>
 </body>
