Agregamos el color del div de servicios, le dimos estilo al texto

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             <a href="#" id="work-link">WORK WITH US!</a>
         </div>
         <div id="services" class="clearfix">
-            <h1>SERVICES WE PROVIDE</h1>
-            <p>
+            <h1 id="h1-service">SERVICES WE PROVIDE</h1>
+            <p id="parrafo-service">
                 We are working with both individuals and businesses from all over the globe 
                 to create awesome websites and applications.
             </p>
