Agregamos las lista de servicios, le dimos estilo a los iconos

--- a/index.html
+++ b/index.html
@@ -38,34 +38,76 @@
             </div>
             <a href="#" id="work-link">WORK WITH US!</a>
         </div>
+
+        <!--Services-->
         <div id="services" class="clearfix">
             <h1 id="h1-service">SERVICES WE PROVIDE</h1>
             <p id="parrafo-service">
                 We are working with both individuals and businesses from all over the globe 
                 to create awesome websites and applications.
             </p>
-            <div id="iconos" class="clearfix">
-                <div>
+            <!--Iconos-->
+            <div id="iconos" class="block-border clearfix">
+                <div class="box-image">
                     <a href="#">
                         <img src="/img/img1.png" alt="">
                     </a>
                 </div>
-                <div>
+                <div class="box-image">
                     <a href="#">
                         <img src="/img/img2.png" alt="">
                     </a>
                 </div>
-                <div>
+                <div class="box-image">
                     <a href="#">
                         <img src="/img/img3.png" alt="">
                     </a>
                 </div>
-                <div>
+                <div class="box-image">
                     <a href="#">
                         <img src="/img/img4.png" alt="">
                     </a>
                 </div>
             </div>
+            <!--Texto de iconos-->
+            <div>
+                <ul id="services-list">
+                    <li>
+                        <h3>
+
+                        </h3>
+                        <p>
+
+                        </p>
+                    </li>
+                    <li>
+                        <h3>
+
+                        </h3>
+                        <p>
+
+                        </p>
+                    </li>
+                    <li>
+                        <h3>
+
+                        </h3>
+                        <p>
+
+                        </p>
+                    </li>
+                    <li>
+                        <h3>
+
+                        </h3>
+                        <p>
+                            
+                        </p>
+                    </li>
+                </ul>
+            </div>
+
+
 
 
         </div>
