Agregamos el texto de los iconos y le dimos estilo

--- a/index.html
+++ b/index.html
@@ -70,41 +70,40 @@
                 </div>
             </div>
             <!--Texto de iconos-->
-            <div>
-                <ul id="services-list">
-                    <li>
-                        <h3>
-
-                        </h3>
-                        <p>
-
-                        </p>
-                    </li>
-                    <li>
-                        <h3>
-
-                        </h3>
-                        <p>
-
-                        </p>
-                    </li>
-                    <li>
-                        <h3>
-
-                        </h3>
-                        <p>
-
-                        </p>
-                    </li>
-                    <li>
-                        <h3>
-
-                        </h3>
-                        <p>
-                            
-                        </p>
-                    </li>
-                </ul>
+            <div id="texto-iconos">
+                <div class="box">
+                    <h3 class="text-padding">
+                        BRANDING
+                    </h3>
+                    <p>
+                        Lorem ipsum dolor sit amet, 
+                        consectetuer adipiscing elit, sed diam nonummy nibh.
+                    </p>
+                </div>
+                <div class="box">
+                    <h3 class="text-padding">
+                        DESING
+                    </h3>
+                    <p>
+                        Sed ut perspiciatis unde omnis iste natus error sit voluptatem  
+                    </p>
+                </div>
+                <div class="box">
+                    <h3 class="text-padding">
+                        DEVELOPMENT
+                    </h3>
+                    <p>
+                        At vero eos et accusamus et iusto odio dignissimos qui blanditiis praesentium.
+                    </p>
+                </div>
+                <div class="box">
+                    <h3 class="text-padding">
+                        ROCKET SCIENCIE
+                    </h3>
+                    <p>
+                        Et harum quidem rerum est et expedita distinctio. Nam libero tempore.
+                    </p>
+                </div>
             </div>
 
 
