--- a/index.html
+++ b/index.html
@@ -105,9 +105,18 @@
                     </p>
                 </div>
             </div>
-
-
-
+        </div>
+        <!--Footer-->
+        <div id="footer" class="block-border clearfix">
+            <ul id="footer-list" class="clearfix">
+                <li><a href="#">Facebook</a></li>
+                <li><a href="#">Twitter</a></li>
+                <li><a href="#">Google +</a></li>
+                <li><a href="#">LinkedIn</a></li>
+                <li><a href="#">Behance</a></li>
+                <li><a href="#">Dribble</a></li>
+                <li><a href="#">Github</a></li>
+            </ul>
 
         </div>
     </div>
