Agregamos estilo al link de header, corregimos errores y le dimos forma, ademas agregamos boder radius a difereste enlaces

--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
                 <p>Hi there! We are the new kids on the block 
                     and we build awesome websites and mobile apps.</p>
             </div>
-            <a href="#" id="work-link">WORK WITH US!</a>
+            <!--Boton de work-->
+            <div id="work-link" >
+                <a href="#">WORK WITH US!</a>
+            </div>
         </div>
 
         <!--Services-->
