Agregamos nuestro primel modal al sitio web

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
+    <!--Modal-->
+    <!--<a href="#miModal">Open Modal</a>-->
+    <div id="miModal" class="modal">
+        <div class="modal-contenido">
+            <a href="#">X</a>
+            <h2>My first Modal</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, laudantium, reiciendis voluptatum tempore error quo enim illum tenetur reprehenderit nobis aliquam cupiditate debitis? Soluta rem quasi consectetur sed a ex.</p>
+        </div>  
+    </div>
     <!--Header-->
     <div id="wrapper">
         <div id="header" class="clearfix">
@@ -38,7 +47,7 @@
             </div>
             <!--Boton de work-->
             <div id="work-link" >
-                <a href="#">WORK WITH US!</a>
+                <a href="#miModal">WORK WITH US!</a>
             </div>
         </div>
 
